# GxX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gx-x/: CMakeLists.txt
gx-x/include/gxx/: app_entry.h  app_native.h  application.h  bitmap.h  color.h  cursor.h  event.h  eventhandler.h  eventsys.h  gui.h  guicontext.h  gxxapp.h  window.h
gx-x/include/gxx/device/: basedevice.h  charinput.h  device_type.h  gamepad.h  keyboard.h  mouse.h
gx-x/src/: app_entry.cpp  app_native_android.cpp  app_native_macos.mm  app_native_windows.cpp  app_native_x11.cpp  application.cpp  cursor.cpp  event.cpp  eventsys.cpp  window.cpp
gx-x/src/device/: basedevice.cpp  charinput.cpp  gamepad.cpp  keyboard.cpp  mouse.cpp
test/: CMakeLists.txt
test/src/: test_window.cpp
